# ramp-up-may-2024-cosmowasm

./: Cargo.toml  donation-contract-spec.txt
proptest-regressions/: lib.txt
src/: contract.rs  lib.rs  msg.rs  state.rs
