[package]
name = "counting_contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = "2.0.3"
cw-storage-plus = "2.0.0"
cw20 = "2.0.0"
serde = { version = "1.0.202", features = ["derive"] }

[dev-dependencies]
cw-multi-test = "2.0.1"
proptest = "1.4.0"
